demo-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  labels:
    app: demo-api
spec:
  ports:
  - port: 9000
    name: http
  clusterIP: None
  selector:
    app: demo-api
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-api
spec:
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: demo-api # has to match .spec.template.metadata.labels
  serviceName: "demo-api"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: demo-api # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: demo-api
        image: lukebond/demo-api:latest
        ports:
        - containerPort: 9000
          name: http
      - args:
        - while true; do sleep 30; done;
        command:
        - /bin/bash
        - -c
        - --
        env: []
        image: nixery.dev/shell/findutils/gnugrep/gnutar/hexdump/less/mount/procps/curl/grpcurl/binutils/gdb/strace/rustc/linuxpackages.perf/perf-tools/gzip/zstd
        imagePullPolicy: IfNotPresent
        name: debug
        ports: []
        resources:
          limits: {}
          requests: {}
        securityContext:
          capabilities:
            add:
            - SYS_PTRACE
            - SYS_ADMIN
            - IPC_LOCK
        volumeMounts: []
