virtual-service-demo-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-api
spec:
  hosts:
  - demo-api
  http:
  - route:
    - destination:
        host: demo-api
        port:
          number: 9000
      weight: 100
