virtual-service-simple.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple
spec:
  hosts:
  - simple
  http:
  - route:
    - destination:
        host: simple
        port:
          number: 1122
      weight: 100
